--- a/cueats_feed/style.css
+++ b/cueats_feed/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -7,11 +10,38 @@
 .main-container {
     max-width: 540px;
     padding: 1rem;
+    margin: auto;
 }
 
 .title h1 { 
     text-align: center;
-    color: dodgerblue;
+    color: #003373;
+    margin-bottom: 1rem;
+    font-family: "Noto Serif", serif;
+}
+
+.filters {
+    overflow: scroll;
+    white-space: nowrap;
+    display: flex;
+    margin-bottom: 1rem;
+    font-family: "Inter", sans-serif;
+}
+
+.filters a {
+    padding: 5px 15px;
+    border: 1px solid gray;
+    display: inline-block;
+    text-decoration: none;
+    text-align: center;
+    color: black;
+    margin: 0;
+}
+
+.filters .active {
+    background-color: #003373;
+    color: white;
+    border: none;
 }
 
 .navigation {
@@ -25,6 +55,7 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    background-color: white;
     
 }
 
@@ -40,7 +71,7 @@
 }
 
 .fa-circle-plus {
-    color: dodgerblue;
+    color: #75AADB;
 }
 
 .reviews_container {
@@ -48,6 +79,45 @@
 }
 
 .review-item {
-    border-top: 1px solid gray;
-    
+    padding: 1rem 0;
+    border-bottom: 1px solid #A1A1A4;
+    margin-bottom: 0.5rem;
+}
+
+.review-item h3 {
+    font-weight: 500;
+    margin-bottom: 0.5rem;
+    font-family: "Noto Serif", serif;
+    font-size: 20px;
+}
+
+.ratings-options {
+    display: flex;
+    justify-content: space-between;
+    font-size: 15px;
+}
+
+.content {
+    margin: 0.5rem 0;
+    display: flex;
+    gap: 1rem;
+    font-family: "Inter", sans-serif;
+}
+
+.content img {
+    border-radius: 10px;
+}
+
+.content a {
+    text-decoration: none;
+    color: #75AADB;
+}
+
+.location-time {
+    display: flex;
+    justify-content: space-between;
+    font-weight: 100;
+    font-size: 12px;
+    color: #A1A1A4;
+    font-family: "Inter", sans-serif;
 }
