--- a/cueats_food_page/styles.css
+++ b/cueats_food_page/styles.css
@@ -36,8 +36,8 @@ body {
 
 .food-image {
     width: 100%;
-    height: 150px; /* Set a fixed height for a rectangular shape */
-    object-fit: cover; /* Ensure the image covers the container proportionally */
+    height: 150px;
+    object-fit: cover;
     border-radius: 12px;
 }
 
@@ -45,7 +45,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 20px;
+    margin: 20px 20px 10px 20px;
 }
 
 .food-title {
@@ -53,6 +53,8 @@ body {
     font-size: 24px;
     font-weight: bold;
     color: #000;
+    margin: 0 0 0px 0;
+
 }
 
 .review-button {
@@ -124,7 +126,8 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 5px;
+    margin-bottom: 5px; /* Smaller bottom margin for tighter alignment */
+    margin-top: -8px; /* Pull stars closer to the review text */
 }
 
 .review-stars {
@@ -136,7 +139,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 10px;
+    margin-top: 5px; /* Reduced top margin for tighter spacing */
     font-size: 12px;
     color: #555555;
 }
