--- a/cueatsapp/src/components/DiningHall.css
+++ b/cueatsapp/src/components/DiningHall.css
@@ -70,6 +70,8 @@
 
 .tab a {
   display: block;
+  text-decoration: none; 
+  color: #555; 
   width: 100%;
   height: 100%;
   color: inherit;
@@ -151,6 +153,8 @@
 
 .rating-text {
   font-size: 16px;
+  text-decoration: none; 
+
   margin-left: 10px;
 }
 
