--- a/cueatsapp/src/components/DiningHall.css
+++ b/cueatsapp/src/components/DiningHall.css
@@ -1,5 +1,3 @@
-/* src/components/DiningHall.css */
-
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif&family=Inter:wght@400;500;700&display=swap');
 
 /* Reset and Base Styles */
@@ -38,16 +36,14 @@ body {
 }
 
 .back-button {
-  font-size: 16px;
+  font-size: 12px !important;
   text-decoration: none;
-  color: #003373;
   font-weight: 500;
 }
 
 .header-title {
   font-family: 'Noto Serif', serif;
   font-size: 24px;
-  color: #003373;
   margin-top: 15px;
 }
 
@@ -93,6 +89,10 @@ body {
 .tab-button:hover {
   background-color: #003373;
   color: #FFFFFF;
+
+  .tab-time {
+    color: #ffffff;
+  }
 }
 
 .tab-button.active {
@@ -100,7 +100,7 @@ body {
   color: #FFFFFF;
 }
 
-.tab-time {
+.tab-button .tab-time {
   display: block;
   font-size: 12px;
   color: #555555;
@@ -234,7 +234,7 @@ body {
   font-family: 'Noto Serif', serif;
   font-size: 20px;
   line-height: 27px;
-  color: #003373;
+  /*color: #003373;*/
   margin-bottom: 10px;
 }
 
@@ -245,7 +245,8 @@ body {
 }
 
 .rating-row i {
-  color: #FFD700; /* Gold color for filled stars */
+  color: #003373;
+  /*color: #FFD700; Gold color for filled stars */
   margin-right: 2px;
   font-size: 16px;
 }
@@ -255,7 +256,7 @@ body {
 }
 
 .rating-text {
-  font-size: 14px;
+  font-size: 16px;
   color: #555555;
   margin-left: 10px;
 }
@@ -275,12 +276,15 @@ body {
 .review {
   display: flex;
   align-items: center;
-  font-size: 14px;
+  justify-content: flex-start;
   color: #555555;
+  padding: 0 !important;
+  font-size: 14px;
 }
 
 .comment-icon {
   margin-right: 5px;
+  align-self: flex-start;
 }
 
 .read-more {
@@ -294,7 +298,6 @@ body {
   text-decoration: underline;
 }
 
-/* No Dishes Message */
 .no-dishes-message {
   text-align: center;
   color: #A1A1A4;
@@ -302,7 +305,7 @@ body {
   margin-top: 20px;
 }
 
-/* Footer */
+/*
 .footer {
   border-top: 1px solid #D9D9D9;
   height: 60px;
@@ -312,7 +315,6 @@ body {
   background: #ffffff;
 }
 
-/* Bottom Nav Items */
 .bottom-nav .nav-item {
   text-align: center;
   font-size: 12px;
@@ -326,3 +328,4 @@ body {
   font-size: 20px;
   margin-bottom: 2px;
 }
+*/
