--- a/cueatsapp/src/components/Feed.css
+++ b/cueatsapp/src/components/Feed.css
@@ -1,5 +1,3 @@
-/* src/components/Feed.css */
-
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
@@ -21,7 +19,7 @@
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
-/* Status Bar */
+/* Status Bar
 .status-bar {
     height: 44px;
     display: flex;
@@ -41,13 +39,14 @@
     margin-left: 10px;
     font-size: 16px;
 }
+*/
 
 /* Header */
 .header {
     border-bottom: 1px solid #D9D9D9;
     display: flex;
     flex-direction: column;
-    padding: 10px 20px;
+    padding: 10px 20px 0 20px !important;
 }
 
 .page-title {
@@ -107,26 +106,11 @@
     scroll-snap-align: center;
 }
 
-/* Scrollbar Indicator (Optional) */
-/* If you want to show a gradient fade on the edges to indicate more filters */
-.filters::after {
-    content: '';
-    flex: 0 0 20px;
-    background: linear-gradient(to right, transparent, white);
-}
-
-/* Scrollbar Indicator Left (Optional) */
-.filters::before {
-    content: '';
-    flex: 0 0 20px;
-    background: linear-gradient(to left, transparent, white);
-}
-
-/* Scrollable Section */
 .section {
     flex: 1;
     overflow-y: auto;
-    padding: 10px 20px;
+    padding: 10px 20px 0 20px !important;
+    background-color: white !important;
 }
 
 /* Review Items */
@@ -141,7 +125,7 @@
     margin-bottom: 0.5rem;
     font-family: "Noto Serif", serif;
     font-size: 20px;
-    color: #003373;
+    /*color: #003373;*/
 }
 
 .ratings-options {
@@ -154,7 +138,7 @@
 
 .stars i {
     margin-right: 2px;
-    color: #FFD700; /* Gold color for filled stars */
+    color: #003373 !important; /* Gold color for filled stars */
 }
 
 .stars .fa-regular.fa-star {
@@ -163,7 +147,7 @@
 
 .actions i {
     margin-left: 10px;
-    color: #555555;
+    color: #333333 !important;
     cursor: pointer;
     transition: color 0.3s;
 }
@@ -199,8 +183,8 @@
 }
 
 .location-time {
-    display: flex;
-    justify-content: space-between;
+    display: flex !important;
+    justify-content: space-between !important;
     font-weight: 100;
     font-size: 12px;
     color: #A1A1A4;
