--- a/cueatsapp/src/components/FoodItemDetails.css
+++ b/cueatsapp/src/components/FoodItemDetails.css
@@ -8,7 +8,8 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
-    padding-top: 30px; 
+    padding-top: 30px;
+    font-family: 'Inter', sans-serif;
   }
   
   .nav-back {
@@ -41,8 +42,7 @@
   
   .food-title {
     font-family: 'Noto Serif', serif;
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 22px;
     color: #000;
     margin: 0;
   }
@@ -51,7 +51,7 @@
     background-color: #4e93d8;
     color: white;
     font-size: 14px;
-    font-weight: bold;
+    /*font-weight: bold;*/
     padding: 8px 16px;
     border: none;
     border-radius: 8px;
@@ -85,7 +85,7 @@
   
   .tag {
     font-weight: bold;
-    color: #007BFF;
+    color: #003373;
   }
   
   .divider {
@@ -93,52 +93,77 @@
     border-top: 1px solid #D9D9D9;
     margin: 15px 20px;
   }
+
+  .section {
+    flex: 1;
+    overflow-y: auto;
+    padding: 10px 20px 0 20px !important;
+    background-color: white !important;
+}
   
   .reviews-header {
-    font-size: 16px;
-    font-weight: bold;
-    margin: 0 20px;
+    font-size: 20px;
+    font-family: 'Noto Serif', serif;
   }
   
   .sort-options {
     font-size: 12px;
     color: #555555;
-    margin: 10px 20px;
+    margin: 10px 0 0 0;
   }
   
-  .review {
-    padding: 10px 20px;
-    font-size: 14px;
-  }
+  .review-item {
+    padding: 20px 0;
+    border-bottom: 1px solid #D9d9d9;
+}
+
+.ratings-options {
+  display: flex;
+  justify-content: space-between;
+  font-size: 15px;
+  margin-bottom: 0.5rem;
+  align-items: center;
+}
+
+.stars i {
+  margin-right: 2px;
+  color: #003373 !important; /* Gold color for filled stars */
+}
+
+.stars .fa-regular.fa-star {
+  color: #C0C0C0; /* Silver color for empty stars */
+}
+
+.actions i {
+  margin-left: 10px;
+  color: #333333 !important;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+.actions i:hover {
+  color: #003373;
+}
+
+.content {
+  font-size: 14px;
+  color: #333333;
+}
+
+.content a {
+  text-decoration: none;
+  color: #75AADB;
+  font-weight: bold;
+}
+
+.location-time {
+  display: block;
+  text-align: right;
+  color: #A1A1A4;
+  margin-top: 0.5rem;
+}
   
-  .review-stars-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 5px;
-    margin-top: -8px;
-  }
-  
-  .review-stars {
-    display: flex;
-    color: #FFD700;
-  }
-  
-  .review-footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 5px;
-    font-size: 12px;
-    color: #555555;
-  }
-  
-  .ratings-options i {
-    margin-right: 10px;
-    color: #007BFF;
-    cursor: pointer;
-  }
-  
+/*
   .nav-bar {
     position: absolute;
     bottom: 0;
@@ -163,3 +188,4 @@
     font-size: 20px;
     margin-bottom: 5px;
   }
+*/
