--- a/cueatsapp/src/components/HomePage.css
+++ b/cueatsapp/src/components/HomePage.css
@@ -1,12 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
 body {
     margin: 0;
     padding: 0;
     font-family: 'Inter', sans-serif;
     background-color: #808080;
 }
-
-/* The container class should be unique to this component, or you can keep it global if desired. 
-   Since this is a component, you can rely on the container class inside this component only. */
 
 .container {
     position: relative;
@@ -116,11 +116,22 @@ header {
     padding: 20px;
     overflow-y: auto;
     flex-grow: 1;
+    text-decoration: none;
+}
+
+.dining-link {
+    text-decoration: none;
+    color: inherit
 }
 
 .dining-item {
     text-align: center;
     font-family: 'Inter', sans-serif;
+}
+
+.dining-item:hover .dining-info .title {
+    /*color: #75AADB*/
+    text-decoration: underline;
 }
 
 .dining-item img {
@@ -132,28 +143,29 @@ header {
 
 .dining-info {
     text-align: left;
+    font-size: 12px;
 }
 
 .dining-info .title {
     font-size: 20px;
-    font-family: 'Alegreya', serif;
+    font-family: 'Noto Serif', serif;
     margin-bottom: 2px;
 }
 
 .dining-info .status {
-    font-size: 12px;
-    font-family: 'Inter', sans-serif; 
+    /*font-size: 12px;*/
+    /*font-family: 'Inter', sans-serif; */
     color: green;
 }
 
 .dining-info .closing {
-    font-size: 12px;
-    font-family: 'Inter', sans-serif; 
+    /*font-size: 12px;*/
+    /*font-family: 'Inter', sans-serif; */
     color: #FFA500;
 }
 
 .dining-info .closed {
-    font-size: 12px;
+    /*font-size: 12px;*/
     font-family: 'Inter', sans-serif; 
     color: red;
 }
