Fix review page

--- a/cueatsapp/src/components/FoodItemDetails.css
+++ b/cueatsapp/src/components/FoodItemDetails.css
@@ -15,6 +15,7 @@
   .nav-back {
     padding: 10px 20px;
     font-size: 12px;
+    font-weight: 500;
     color: #000000;
     margin-bottom: 5px;
   }
