--- a/cueatsapp/src/components/DiningHall.css
+++ b/cueatsapp/src/components/DiningHall.css
@@ -39,6 +39,7 @@ body {
   font-size: 12px !important;
   text-decoration: none;
   font-weight: 500;
+  color: black !important;
 }
 
 .header-title {
