--- a/cueatsapp/src/components/Feed.css
+++ b/cueatsapp/src/components/Feed.css
@@ -30,10 +30,10 @@ body {
 
 /* Header */
 .header {
-    padding: 20px;
-    border-bottom: 1px solid #E0E0E0;
-    position: relative;
-    background-color: #ffffff;
+    border-bottom: 1px solid #D9D9D9;
+    display: flex;
+    flex-direction: column;
+    padding: 10px 20px 0 20px !important;
 }
 
 .page-title {
@@ -88,23 +88,24 @@ body {
 .section {
     flex: 1;
     overflow-y: auto;
-    padding: 20px;
-    background-color: #f9fafc;
+    padding: 10px 20px 0 20px;
+    background-color: #ffffff;
 }
 
 .review-item {
-    padding: 15px;
-    background: #ffffff;
-    border-radius: 15px;
-    margin-bottom: 20px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-    transition: transform 0.2s, box-shadow 0.2s;
+    padding: 1rem 0 !important;
+    border-bottom: 1px solid #d9d9d9;
+    font-family: "Inter", sans-serif;
 }
 
-.review-item:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+.review-item h3 {
+    font-weight: 500;
+    margin-bottom: 0.5rem;
+    font-family: "Noto Serif", serif;
+    font-size: 20px;
+    /*color: #003373;*/
 }
+
 
 .review-header {
     display: flex;
@@ -139,20 +140,20 @@ body {
     margin-top: 5px;
 }
 
-.review-stars {
+.ratings-options {
     display: flex;
+    justify-content: space-between;
+    font-size: 15px;
+    margin-bottom: 0.5rem;
     align-items: center;
-    margin-top: 10px;
-    font-size: 14px;
-    color: #555555;
 }
 
-.review-stars i {
-    color: #FFD700; /* Gold color for filled stars */
+.stars i {
     margin-right: 2px;
+    color: #003373 !important; /* Gold color for filled stars */
 }
 
-.review-stars .fa-regular.fa-star {
+.stars .fa-regular.fa-star {
     color: #C0C0C0; /* Silver color for empty stars */
 }
 
@@ -162,18 +163,50 @@ body {
     color: #555555;
 }
 
-.review-text {
-    font-size: 14px;
-    color: #333333;
-    margin: 10px 0;
-    line-height: 1.5;
+.actions i {
+    margin-left: 10px;
+    color: #333333 !important;
+    cursor: pointer;
+    transition: color 0.3s;
 }
 
-.review-footer {
-    display: flex;
-    justify-content: space-between;
+.actions i:hover {
+    color: #003373;
+}
+
+.content-feed {
+    margin: 0.5rem 0;
+    display: flex !important;
+    gap: 1rem;
+    align-items: center;
+}
+
+.content-feed img {
+    border-radius: 10px;
+    width: 70px;
+    height: 70px;
+    object-fit: cover;
+}
+
+.content-feed p {
+    font-size: 14px;
+    color: #333333;
+    line-height: 1.4;
+}
+
+.content-feed a {
+    text-decoration: none;
+    color: #75AADB;
+    font-weight: bold;
+}
+
+.location-time {
+    display: flex !important;
+    justify-content: space-between !important;
+    font-weight: 100;
     font-size: 12px;
     color: #A1A1A4;
+    margin-top: 0.5rem;
 }
 
 .load-more-container {
