--- a/cueatsapp/src/components/FoodItemDetails.css
+++ b/cueatsapp/src/components/FoodItemDetails.css
@@ -149,6 +149,7 @@
 .content {
   font-size: 14px;
   color: #333333;
+  display: block !important;
 }
 
 .content a {
@@ -163,30 +164,3 @@
   color: #A1A1A4;
   margin-top: 0.5rem;
 }
-  
-/*
-  .nav-bar {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    background: white;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    border-top: 1px solid #D9D9D9;
-  }
-  
-  .nav-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: 12px;
-    color: #555555;
-  }
-  
-  .nav-item i {
-    font-size: 20px;
-    margin-bottom: 5px;
-  }
-*/
